--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Segoe Print', 'Comic Sans MS', cursive, sans-serif;
-    background-color: #1a1a1a;
+    background-color: #000000;
     color: white;
     display: flex;
     justify-content: center;
@@ -27,6 +27,7 @@ body {
     border-right: 3px solid #fff; /* Simulate the cursor */
     width: 0; /* Initially set the width to 0 */
     animation: typing 4s steps(25) 1s 1 normal both, blink-caret 0.75s step-end infinite;
+    text-shadow: 0px 0px 10px #0066ff,0px 0px 20px #0066ff,0px 0px 30px #0066ff, 0px 0px 40px #0066ff;
 }
 
 /* Keyframes for typing effect */
