--- a/style.css
+++ b/style.css
@@ -20,33 +20,11 @@ body {
     text-align: center;
     color: white;
 }
-
 .welcome-text {
     font-size: 3em;
-    white-space: nowrap; /* Prevent text from wrapping */
-    overflow: hidden; /* Hide the text initially */
-    border-right: 3px solid #fff; /* Simulate the cursor */
-    width: 0; /* Initially set the width to 0 */
-    animation: typing 4s steps(25) 1s 1 normal both, blink-caret 0.75s step-end infinite;
     text-shadow: 0px 0px 10px #0066ff,0px 0px 20px #0066ff,0px 0px 30px #0066ff, 0px 0px 40px #0066ff;
 }
 
-/* Keyframes for typing effect */
-@keyframes typing {
-    from {
-        width: 0;
-    }
-    to {
-        width: 100%;
-    }
-}
-
-/* Cursor blinking effect */
-@keyframes blink-caret {
-    50% {
-        border-color: transparent;
-    }
-}
 .bgAnimation{
     position: absolute;
     top: 0;
@@ -71,7 +49,7 @@ body {
 }
 
 .colorBox:hover{
-    background: #00bfff;
+    background: #0066ff;
     transition-duration: 0s;
 }
 
@@ -81,7 +59,7 @@ body {
     left: 0;
     width: 100%;
     height: 40px;
-    background: #00bfff;
+    background: #0066ff;
     filter: blur(60px);
     animation: animBack 6s linear infinite;
 }
@@ -93,4 +71,59 @@ body {
     100%{
         top: 120%;
     }
+}
+.sub{
+    font-size: 20px;
+    padding-top: 20px;
+    text-shadow: 0px 0px 10px #0066ff,0px 0px 20px #0066ff,0px 0px 30px #0066ff, 0px 0px 40px #0066ff;
+}
+header{
+    margin-top: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1rem 9%;
+    background-color: transparent;
+    filter: drop-shadow(10px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+.logo{
+    font-size: 2rem;
+    color: #ffffff;
+    text-shadow: 0px 0px 10px #0066ff,0px 0px 20px #0066ff;
+    font-weight: 800;
+    cursor: pointer;
+    transform: 0.3s ease;
+    text-decoration: none;
+}
+.logo:hover{
+    transform: scale(1.1);
+}
+nav a{
+    font-size: 1rem;
+    color: white;
+    margin-left: 2rem;
+    font-weight: 500;
+    transform: 0.3s ease;
+    border-bottom: 3px solid transparent;
+    text-decoration: none;
+}
+nav a:hover,
+nav a.active{
+    color: #ffffff;
+    border-bottom: 3px solid #0066ff;
+    text-shadow: 0px 0px 10px #0066ff,0px 0px 20px #0066ff;
+}
+@media (max-width: 768px){
+    .welcome-text{
+        font-size: 2rem;
+    }
+    .sub{
+        font-size: 1rem;
+    }
+    
 }
